--- a/presentation.html
+++ b/presentation.html
@@ -12,7 +12,9 @@
 <div class="reveal">
     <div class="slides">
         <section id="start">
-            <h1>Spark ML Meets Real Estate</h1>
+            <h2>Spark ML Meets Real Estate</h2>
+
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
         </section>
 
         <!--
